# Dental_006

./: .ci_trigger  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  app.py  app_check.py  clear_data.py  development_log.txt  docker-compose.yml  export_onnx.py  main.py  picos_config.yaml  pyproject.toml  reproduce_age_fix.json  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  python-ci.yml
data/: app_state.db  report.md  report_EN.md  report_KO.md  test_systematic_reviewer.db
data/asreview_project.asreview.tmp/: project.json
data/logs/: download_fail_17090171_20260603_214741.json  download_fail_17090171_20260603_214742.json  download_fail_17090171_20260603_214743.json  download_fail_17165248_20260603_214756.json  download_fail_17340895_20260612_232704.json  download_fail_17726992_20260612_232634.json  download_fail_17878188_20260603_214749.json  download_fail_17878188_20260603_214750.json  download_fail_17878188_20260603_214751.json  download_fail_18193973_20260603_214737.json  download_fail_18193973_20260603_214738.json  download_fail_18193973_20260603_214739.json  download_fail_18502970_20260603_214823.json  download_fail_19123693_20260603_214732.json  download_fail_19123693_20260603_214734.json  download_fail_19123693_20260603_214735.json  download_fail_19344033_20260612_232641.json  download_fail_19413377_20260603_214813.json  download_fail_19413377_20260603_214814.json  download_fail_19413377_20260603_214815.json  download_fail_20198994_20260612_232705.json  download_fail_21909496_20260612_232608.json  download_fail_23338275_20260603_214641.json  download_fail_23338275_20260603_214645.json  download_fail_23338275_20260603_214649.json  download_fail_25316463_20260612_232635.json  download_fail_25726403_20260603_214755.json  download_fail_28968333_20260603_214730.json  download_fail_29222594_20260603_214747.json  download_fail_31474265_20260603_214803.json  download_fail_33317118_20260603_214817.json  download_fail_33317118_20260603_214818.json  (+9 more)
data/raw/: README.md
docs/: ARCHITECTURE.md  DATA_ETHICS.md  DECISIONS.md  DEDUPLICATION_CHECKLIST.md  EVALUATION.md  MODEL_CARD.md  PROJECT_PLAN.md
logs/: db_dump.txt  docker_err.txt
reference_materials/: Development_log.txt  README.md  memo_251013_1044_planning.txt
reports_archive/: 260710_0952_Systematic_Reviewer_Validation_Report.md
scripts/: clear_data.py  evaluate_extraction.py  start_services.bat  start_services_test.bat
tests/: reproduce_issue.py  reproduce_issue_v2.py  test_db_manager.py  test_deduplicator.py  test_downloader.py  test_integration.py  test_metadata_resolver.py  test_pico_extractor.py  test_pipeline.py  test_pubmed_parser.py  test_screener.py  test_validation.py  verify_pipeline.py
(+38 files in other folders)
