[project]
name = "systematic-reviewer-ai"
version = "1.0.0"
description = "AI-powered Systematic Review assistant using Gemma 2 and GROBID"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hyunchan An", email = "chemahc94@pusan.ac.kr"}
]
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy<2.0.0",
    "asreview>=1.0",
    "pypdf>=3.17.0",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
    "asreview-makita>=1.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0.0",
    "types-PyYAML>=6.0.12.12",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 127
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
